grammar.js
    compilation_unit: $ => seq(
      optional($.shebang),
      optional($._definitions)
    ),

    _definitions: $ => seq(
      repeat(';;'),
      choice($._module_item, $.toplevel_directive, seq($._seq_expression, repeat($.item_attribute))),
      repeat(choice(
        seq(repeat(';;'), choice($._module_item, $.toplevel_directive)),
        seq(repeat1(';;'), seq($._seq_expression, repeat($.item_attribute)))
      )),
      repeat(';;')
    ),

    // Toplevel

    _module_item: $ => choice(
      $.value_specification,
      $.value_definition,
      $.external,
      $.type_definition,
      $.exception_definition,
      $.module_definition,
      $.module_type_definition,
      $.open_statement,
      $.include_statement,
      $.class_definition,
      $.class_type_definition,
      $.floating_attribute,
      $.item_extension
    ),

    value_definition: $ => seq(
      choice(
        seq('let', optional($._extension_attribute), optional('rec')),
        $.let_operator
      ),
      sep1(
        choice(
          seq('and', repeat($.attribute)),
          $.and_operator
        ),
        $.let_binding
      )
    ),

    let_binding: $ => seq(
      $._pattern,
      repeat($.parameter),
      optional(seq(':', $._poly_type)),
      optional(seq(':>', $._type)),
      '=',
      $._seq_expression,
      repeat($.item_attribute)
    ),

    type_definition: $ => seq(
      'type', optional($._extension_attribute), optional('nonrec'),
      sep1(seq('and', repeat($.attribute)), $.type_binding)
    ),

    type_binding: $ => seq(
      optional($.type_params),
      choice(
        seq(
          $._type_constructor,
          optional($._type_equation),
          optional(seq(
            '=',
            optional('private'),
            choice(
              $.variant_declaration,
              $.record_declaration,
              '..'
            )
          )),
          repeat($.type_constraint)
        ),
        seq(
          $.type_constructor_path,
          seq(
            '+=',
            optional('private'),
            $.variant_declaration,
          )
        )
      ),
      repeat($.item_attribute)
    ),

    _type_equation: $ => seq(
      choice('=', ':='),
      optional('private'),
      $._type
    ),

    variant_declaration: $ => choice(
      seq('|', sep('|', $.constructor_declaration)),
      sep1('|', $.constructor_declaration)
    ),

    constructor_declaration: $ => seq(
      choice(
        $._constructor_name,
        seq('[', ']'),
        parenthesize('::')
      ),
      optional(choice(
        seq('of', $.constructor_argument),
        seq(':', $._simple_type),
        seq(':', $.constructor_argument, '->', $._simple_type),
        seq('=', $.constructor_path)
      )),
      repeat($.attribute)
    ),

    record_declaration: $ => seq(
      '{',
      sep1(seq(';', repeat($.attribute)), $.field_declaration),
      optional(seq(';', repeat($.attribute))),
      '}'
    ),

    field_declaration: $ => seq(
      optional('mutable'),
      $._field_name,
      ':',
      $._poly_type,
    ),

    module_definition: $ => seq(
      'module', optional($._extension_attribute), optional('rec'),
      sep1(seq('and', repeat($.attribute)), $.module_binding)
    ),

    module_binding: $ => seq(
      $._module_name,
      repeat($.module_parameter),
      optional(seq(':', $._module_type)),
      optional(seq('=', $._module_expression)),
      repeat($.item_attribute)
    ),

    module_type_definition: $ => seq(
      'module', 'type',
      optional($._extension_attribute),
      $._module_type_name,
      optional(seq('=', $._module_type)),
      repeat($.item_attribute)
    ),

    _module_type: $ => prec.right(seq(
      choice(
        $.module_type_path,
        $.signature,
        $.module_type_constraint,
        $.module_type_of,
        $.functor_type,
        $.parenthesized_module_type,
        $.extension
      ),
      repeat($.attribute)
    )),

    _module_expression: $ => prec.dynamic(1, prec.right(seq(
      choice(
        $._module_name,
        $.structure,
        $.functor,
        $.module_application,
        $.submodule,
        $.typed_module_expression,
        $.packed_module,
        $.parenthesized_module_expression,
        $.extension
      ),
      repeat($.attribute)
    ))),

    structure: $ => seq(
      'struct',
      repeat($.attribute),
      optional($._definitions),
      'end'
    ),

    _poly_type: $ => seq(
      optional(seq($.polymorphic_types, '.')),
      $._type
    ),

    _simple_type: $ => choice(
      $.type_variable,
      $.type_constructor_path,
      $.constructed_type,
      $.polymorphic_variant_type,
      $.package_type,
      $.hash_type,
      $.object_type,
      $.parenthesized_type,
      $.extension
    ),

    _type: $ => prec.right(seq(
      choice(
        $._simple_or_tuple_type,
        $.function_type,
        $.aliased_type
      ),
      repeat($.attribute)
    )),

    _expression: $ => prec.right(seq(
      choice(
        $._simple_expression,
        $.product_expression,
        $.cons_expression,
        $.application_expression,
        $.infix_expression,
        alias($._sign_expression, $.prefix_expression),
        $.set_expression,
        $.if_expression,
        $.while_expression,
        $.for_expression,
        $.match_expression,
        $.function_expression,
        $.fun_expression,
        $.try_expression,
        $.let_expression,
        $.assert_expression,
        $.lazy_expression,
        $.let_module_expression,
        $.let_open_expression,
        $.let_exception_expression,
        $.object_expression
      ),
      repeat($.attribute)
    )),

    _seq_expression: $ => choice(
      $._expression,
      $.sequence_expression
    ),

    sequence_expression: $ => prec.right(PREC.seq, seq(
      $._expression,
      ';',
      optional(seq(
        optional(seq('%', $.attribute_id)),
        $._seq_expression
      ))
    )),

    let_expression: $ => prec.right(PREC.match, seq(
      $.value_definition,
      'in',
      $._seq_expression
    )),

    _pattern_or_exception: $ => choice(
      $._pattern,
      seq($.exception_pattern, repeat($.attribute))
    ),

    _pattern: $ => prec.right(seq(
      choice(
        $._simple_pattern,
        $.alias_pattern,
        $.or_pattern,
        $.constructor_pattern,
        $.tag_pattern,
        $.tuple_pattern,
        $.cons_pattern,
        $.range_pattern,
        $.lazy_pattern
      ),
      repeat($.attribute)
    )),

    constructor_pattern: $ => prec.right(PREC.app, seq(
      $.constructor_path,
      $._pattern
    )),

    attribute: $ => seq('[@', $.attribute_id, optional($.attribute_payload), ']'),

    item_attribute: $ => seq('[@@', $.attribute_id, optional($.attribute_payload), ']'),

    floating_attribute: $ => seq('[@@@', $.attribute_id, optional($.attribute_payload), ']'),

    attribute_payload: $ => choice(
      $._definitions,
      seq(':', choice($._type, $._module_item)),
      seq('?', $._pattern_or_exception, optional(seq('when', $._seq_expression)))
    ),

    extension: $ => seq('[%', $.attribute_id, optional($.attribute_payload), ']'),

    item_extension: $ => seq('[%%', $.attribute_id, optional($.attribute_payload), ']'),

    _extension_attribute: $ => prec.right(choice(
      seq('%', $.attribute_id),
      $.attribute,
      seq($._extension_attribute, repeat1($.attribute))
    )),

    // Constants

    _sign_operator: $ => choice('+', '-', '+.', '-.'),

    value_name: $ => choice(
      $._identifier,
      parenthesize(choice(
        $.prefix_operator,
        alias($._sign_operator, $.infix_operator),
        $.infix_operator,
        seq(
          '.',
          $.indexing_operator,
          choice(
            seq('(', ')'),
            seq('[', ']'),
            seq('{', '}')
          ),
          optional('<-')
        ),
        $.let_operator,
        $.and_operator,
        $.match_operator
      ))
    ),

    value_path: $ => choice(
      $.value_name,
      seq($._module_name, '.', $.value_path)
    ),

    constructor_path: $ => prec.right(choice(
      $._constructor_name,
      seq($._module_name, '.', $.constructor_path)
    )),

    _extended_module_name: $ => seq(
      $._module_name,
      repeat(parenthesize($.module_path))
    ),

    module_path: $ => choice(
      $._extended_module_name,
      seq($._extended_module_name, '.', $.module_path)
    ),

    type_constructor_path: $ => choice(
      $._type_constructor,
      seq($._extended_module_name, '.', $.type_constructor_path)
    ),

    _field_name: $ => alias($._identifier, $.field_name),
    _type_constructor: $ => alias($._identifier, $.type_constructor),
    _module_name: $ => alias($._capitalized_identifier, $.module_name),
    _module_type_name: $ => alias(choice($._capitalized_identifier, $._identifier), $.module_type_name),
    _constructor_name: $ => alias($._capitalized_identifier, $.constructor_name),

    _identifier: $ => /[a-z_][a-zA-Z0-9_']*/,
    _capitalized_identifier: $ => /[A-Z][a-zA-Z0-9_']*/,

    attribute_id: $ => sep1('.', choice($._identifier, $._capitalized_identifier))
  },
